--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
                 </label>
             </div>
             <div class="mb-3">
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </form>
     </div>
